--- a/src/autonoma/bibliotecagit/app/views/ActualizarLibros.form
+++ b/src/autonoma/bibliotecagit/app/views/ActualizarLibros.form
@@ -25,6 +25,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="btnActualizarLibro" min="-2" pref="85" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="btnCerrar" min="-2" max="-2" attributes="0"/>
@@ -77,11 +78,11 @@
               </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="btnActualizarLibro" alignment="1" min="-2" pref="73" max="-2" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="btnCerrar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="btnActualizarLibro" alignment="1" min="-2" pref="73" max="-2" attributes="0"/>
               </Group>
           </Group>
       </Group>
